--- a/client/package.json
+++ b/client/package.json
@@ -17,15 +17,19 @@
     "@mui/material": "^5.15.15",
     "@mui/x-date-pickers": "^7.3.1",
     "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
     "export-to-csv": "^1.3.0",
+    "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "material-react-table": "^2.13.0",
+    "multer": "^1.4.5-lts.1",
     "papaparse": "^5.4.1",
+    "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
+    "react-bootstrap": "^2.10.4",
     "react-bootstrap-typeahead": "^6.3.2",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
